address compilation warnings due to deprecated call to newInstance